--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,4 @@
 # These individuals contributed to the hbnb project in this repository 
 
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
-
-Kidus Worku <kidusmik@gmail.com>
-Ephrem Abebe <ephremyeabe@gmail.com>
+Dagmawi Demeke <Dagmawidemeke@gmail.com>
+Abel Ayele <abel24732235@gmail.com>
